feat: chunk based encryption/decryption with detailed progress per file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3.8'
 services:
   mysticvault:
+    image: sunnydsouza/mysticvault:0.1.0
     build: .
     container_name: mysticvault
     ports:
